<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaxiNetMD</string>
    <string name="hello_world">TaxiNetMD</string>
    <string name="action_settings">Settings</string>
    <string name="call_taxi_firm">Call Taxi Firm</string>
    <string name="welcome">Welcome</string>
    <string name="skip_and_start">Skip and start</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="connected_account">Connected Account</string>
    <string name="connected">Connected</string>
    <string name="usual_palce">Usual Place</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="trip_history">Trip History</string>
    <string name="success">Success</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="phone">Phone</string>
    <string name="accept">Accept</string>
    <string name="home_number">Home Number</string>
    <string name="street">Street</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="company_promotion">Company Promotion</string>
    <string name="first_name">Fisrt Name</string>
    <string name="last_name">Last Name</string>
    <string name="cancel">Cancel</string>
    <string name="term">Term</string>
    <string name="deni">Deni</string>
    <string name="get_password">Get Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="guideline_get_password">* Enter you email or number, we will re-create password for you</string>
    <string name="your_request">Your request</string>
    <string name="request_to_you">Request to you</string>
    <string name="time">03:12</string>
    <string name="note">Note</string>
    <string name="desc_list_item_icon">Note</string>
    <string name="driver">Driver</string>
    <string name="distance">Distance | Price</string>
    <string name="busy">• Busy</string>
    <string name="avalible">• Avalible</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_value">(04) 3 113</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="add_note">Add Note</string>
    <string name="starting_point">Starting point</string>
    <string name="stopping_point">Stopping point</string>
    <string name="same_journey">Same Journey</string>
    <string name="selected_driver">Selected Driver</string>
    <string name="remove_driver">Remove Driver</string>
    <string name="delete_journey">Delete Journey</string>
    <string name="distace_prompt">5KM</string>
    <string name="action_edit">Edit</string>
    <string name="taxi">Taxi</string>
    <string name="taxi_truck">Truck</string>
    <string name="place">Place</string>
    <string name="packing_place">Packing Place</string>
    <string name="empty_error">Account and password can\'t be blank</string>
    <string name="account_error">Wrong format of email or phone number</string>
    <string name="email_error">Wrong format of email</string>
    <string name="two_password_error">Two password must be the same</string>
    <string name="phonenumber_error">Wrong format of phone number</string>
    <string name="login_error">Account or password is incorrect</string>
    <string name="register_blank_error">You must fill all the information</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error">Error</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="alert_internet_error_title">Internet Connection Error</string>
    <string name="alert_internet_error_message">Please connect to working Internet connection</string>
    <string name="alert_term_title">Term Error</string>
    <string name="alert_term_message">You need to agree with our term before register</string>
    <string name="alert_invalid_info">Invalid Information</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="wrong_email_or_password">Email or password is incorrect</string>
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="password_length_error">Password must be more than 6 character</string>
    <string name="continues">Continue</string>
    <string name="agree_with_term">I agree with term</string>
    <string name="picked">Picked</string>
    <string name="return_customer">Return Customer</string>
    <string name="email_or_password">Email or phone number</string>
    <string name="response_request">Response Request</string>
    <string name="response_request_message">Responsing request to server</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Profile</item>
        <item>Map</item>
        <item>Registration trip Promotions</item>
        <item>VIP Rider</item>
        <item>History Call</item>
        <item>Pay</item>
        <item>Promotion</item>
        <item>Support</item>
        <item>About</item>
    </string-array>

    <!-- Distance to show driver -->
    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_fb</item>
        <item>@drawable/ic_fb</item>
        <item>@drawable/ic_fb</item>
        <item>@drawable/ic_fb</item>
        <item>@drawable/ic_fb</item>
        <item>@drawable/ic_fb</item>
    </array>

    <string name="title_activity_aq">AQ</string>

</resources>